# spiking-neat

./: .gitignore  CHANGELOG.org  LICENSE  NOTES.org  README.org  cabal.project  cabal.project.freeze  spiking-neat.cabal
app/: Main.hs
lib/: NEAT.hs  SNMonad.hs  SSMonad.hs  SSNumeric.hs
lib/Evolution/: Evolution.hs  GoalTypes.hs  Goals.hs  Goals.hs-boot
lib/Genetics/: Critters.hs  GeneTypes.hs  Genes.hs  Genes.hs-boot  Neurons.hs
lib/Population/: Population.hs
playground/: CritterDSL.hs  Load1.hs  LoadExample.hs  RandomGen.hs
test/: Spec.hs
