cabal-version:      3.4
name:               spiking-neat

version:            0.1.0.0

synopsis:
  Implementation of Spiking Neural Evolution of Augmenting Topologies

description:
  Influenced by NEAT and HTM.

license:            MIT
license-file:       LICENSE
author:             Fred Mitchell
maintainer:         eltoro@atomlogik.de

copyright:          2024 Fred Mitchell & Atomlogik.de
category:           Machine Learning
build-type:         Simple
extra-doc-files:    CHANGELOG.org

common warnings
    ghc-options: -O3
                 -Wall
                 -threaded

library
    import:           warnings
    exposed-modules:
        NEAT
      , SNMonad
      , Evolution.Goals
      , Genetics.Critters
      , Genetics.Genes
      , Genetics.Neurons
      , Population.Population
    other-modules:
        Paths_spiking_neat
    hs-source-dirs:
        lib
    build-depends:
        base >=4.7 && <5
      , mtl
      -- , llvm-hs-pure
    default-language: Haskell2010

executable sneat
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.7 && <5
      , mtl
      , spiking-neat
      
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts
                 -with-rtsopts=-N
