cabal-version:      3.4
name:               spiking-neat

version:            0.1.0.0

synopsis:
  Implementation of Spiking Neural Evolution of Augmenting Topologies

description:
  Influenced by NEAT and HTM.

license:            MIT
license-file:       LICENSE
author:             Fred Mitchell
maintainer:         eltoro@atomlogik.de

copyright:          2024 Fred Mitchell & Atomlogik.de
category:           Machine Learning
build-type:         Simple
extra-doc-files:    CHANGELOG.org

common commons
    ghc-options: -O3
                 -Wall
                 -threaded
    build-depends:
        base >=4.7 && <5
      -- , llvm-general >= 3.8 && < 4.0
      , pretty-simple
      , random
      , ghc
      , ghc-paths
      , ghc-prim
      -- , hsc2hs
    default-language: GHC2021

library
    import:           commons
    exposed-modules:
        NEAT
      , SNMonad
      , SSNumeric
      , Evolution.Goals
      , Evolution.GoalTypes
      , Genetics.Critters
      , Genetics.Genes
      , Genetics.GeneTypes
      , Genetics.Neurons
      , Population.Population
    other-modules:
        Paths_spiking_neat
    hs-source-dirs:
        lib
    build-depends:
        mtl
      , unordered-containers
      , hashable
      , lens
      , data-default
      , transformers
      -- , plugins
executable sneat
    import:           commons
    ghc-options: -rtsopts
                 -with-rtsopts=-N
    main-is:     Main.hs
    build-depends:
        mtl
      , spiking-neat
    hs-source-dirs:   app

executable playground-dsl
    import:           commons
    ghc-options: -rtsopts
                 -with-rtsopts=-N
    main-is:     CritterDSL.hs
    build-depends:
        mtl
      , spiking-neat
    hs-source-dirs:
        playground

executable playground-random
    import:           commons
    ghc-options: -rtsopts
                 -with-rtsopts=-N
    main-is:     RandomGen.hs
    build-depends:
        mtl
      , spiking-neat
    hs-source-dirs:
        playground

--- executable playground-load-1
---     import:           commons
---     ghc-options: -rtsopts
---                  -with-rtsopts=-N
---     main-is:     Load1.hs
---     build-depends:
---         mtl
---       , spiking-neat
---     hs-source-dirs:
---         playground

test-suite sn-spec
    import:           commons
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    build-depends:
        base >=4.7 && <5
      , hspec
      , QuickCheck
      , spiking-neat
